Mon Mar  9 21:21:19 PST 1998 Shawn T. Amundson <amundson@gimp.org>

	* Released 0.99.5

Mon Mar  9 23:24:42 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk/gtkclist.c (gtk_clist_get_selection_info): Export
	functionality.

Tue Mar 10 05:42:34 1998  Tim Janik  <timj@gimp.org>

        * configure.in: Bumped version number to 0.99.5.

Tue Mar 10 05:30:05 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkrange.h:
	* gtk/gtkrange.c:
 	changed gtk_range_trough_click() to take an additional jump_perc arg,
	class method and callers changed.

	* gdk/gdk.c (gdk_ic_destroy): applied gtk-gronlund-980309-1.patch.gz
	which fixes a memory leak.

Mon Mar  9 20:38:15 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.c gtk/gtkeditable.c gtk/gtkspinbutton.c: 
	  Moved "activate" to editable class. Made the vfuncs in 
	  gtkeditable just vfuncs not signals.

	* gtkentry.[ch] gtktext.[ch]: Made behavior when pressing
	  multiple buttons at once more rational.

	* gtkentry.c gtktext.c: Unified and rationalized key
	  bindings. (Now are basically emacs+CUA)
	
	* gtktext.c: 
          - Last position now always shares the property of the preceding
	    character
	  - Freeze the widget when inserting large amounts of text.
	  - Selecting lines now selects the _whole_ line.
          - Fixed bug with displaying the cursor
	  - Ctrl-Home/End now move the cursor to the _absolute home/end
	
	* gtkmenuitem.c: Remove necessary code out of a g_return_if_fail

1998-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkclist.c (gtk_clist_set_foreground): We now accept the
	color parameter to be NULL.  If it is NULL, it will mark the row
	with "color not set", so it will be repainted with the default color.
	(gtk_clist_set_background): Likewise.

Mon Mar  9 15:48:10 1998  Tim Janik  <timj@gimp.org>

	* Signal signedness and naming corrections, plus GtkType fixes:

	* gtk/gtkadjustment.c: 
	* gtk/gtkbutton.c:
	* gtk/gtkcheckmenuitem.c:
	* gtk/gtkclist.c: 
	* gtk/gtkcolorsel.c: 