@@ -1,3 +1,7 @@
+Tue Mar 10 00:49:18 EST 1998 The Rasterman <raster@redhat.com>
+        * gdk/gdkwindow.c: (gdk_window_xid_at) fixed minor memory leak and
+	minor buglet in tree search.
+		
 Mon Mar  9 21:21:19 PST 1998 Shawn T. Amundson <amundson@gimp.org>
 
 	* Released 0.99.5
